media/css/new/planet.css
#sidebar li {
    line-height: 17px;
    margin-left: 8px;
}
#sidebar li a {
    color: #7E7E7E;
    font-size: 11px;
    text-decoration: none;
}
span.bullet {
    color: #CCCCCC;
    font-size: 9px;
    font-family: "Arial";
}
.post {
    width: 640px;
    margin-bottom: 32px;
}
.post .title { margin-bottom: 5px; }
.post .title a {
    color: #009FE0;
    font-size: 17px;
    font-weight: bold;
    text-decoration: none;
}
.post .tags { margin-bottom: 10px; }
.post .tags a {
    color: #999999;
    font-size: 11px;
    font-family: "Arial";
}
.post .date {
    float: right;
    width: 45px;
    height: 45px;
    background-color: #009FE0;
    text-align: center;
    font-weight: bold;
}
.date .day {
    color: white;
    font-size: 23px;
}
.date .month {
    color: #AAD1EE;
    font-size: 15px;
}
.post .content {
    color: #999999;
    font-size: 11px;
}
.post .content p {
    display: block;
    margin-bottom: 16px;
}
.content .author {
    float: left;
    width: 80px;
    margin: 10px;
}
.author .name a {
    color: #999999;
    font-size: 11px;
    font-weight: bold;
    text-decoration: none;
}

